DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2001-01-07 patrickh When a sim socket closes, undelivered messages are flushed
                    from the network.
2002-01-03 patrickh Added support for connection initiation events, connection
                    completion events, and localhost message delivery events
                    to the socket simulator code.
                    NEW VERSION: 0.9.1
2002-01-02 patrickh Rewrote the build system for the test suite so that it can
                    use .cpp files instead of having everything in .h files.
2002-01-02 allenb   vpr::Interval now uses a Uint64 value internally.  This 
                    eliminates the issue of wrapping that existed in the old
                    method.
2002-01-01 allenb   Fixed vpr::Interval::operator<().
2001-12-31 patrickh Sim sockets have had major overhauls that improve
                    performance, stability, and functionality.
                    NEW VERSION: 0.9.0
2001-12-31 allenb   Added interface isBound() to Socket_t and Socket impls.
2001-12-30 allenb   Complete rewrite of sim::SocketManager and many of the
                    associated sim classes.
2001-12-27 allenb   Added setNowReal() method to vpr::Interval.
                    NEW VERSION: 0.8.4
2001-12-20 patrickh vpr::InetAddr now has getHostname() and getHostnames() that
                    return the hostname(s) for a given address.
                    NEW VERSION: 0.8.3
2001-12-20 patrickh POSIX sockets have caught up to NSPR sockets again.
                    NEW VERSION: 0.8.2
2001-12-19 patrickh Support for building a profiled VPR library has been added.
2001-12-13 patrickh The simulated Socket Manager separates the binding of UDP
                    and TCP sockets.
                    NEW VERSION: 0.8.1
2001-12-13 patrickh The simulator clock now operates in vpr::Intervals so that